--- a/src/marketplaceIndex.css
+++ b/src/marketplaceIndex.css
@@ -118,9 +118,9 @@ textarea {
 
 :global(.fontsLoaded) {
   & body {
-    font-family: 'sofiapro', Helvetica, Arial, sans-serif;
+    font-family: 'garamond', Helvetica, Arial, sans-serif;
   }
   & button {
-    font-family: 'sofiapro', Helvetica, Arial, sans-serif;
+    font-family: 'karmaticarcade', Helvetica, Arial, sans-serif;
   }
 }
