--- a/src/marketplace.css
+++ b/src/marketplace.css
@@ -23,7 +23,7 @@
   --backgroundImage: {
     /* Gradient direction and overlaying the black color on top of the image for better readability */
     background: linear-gradient(-45deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)),
-      url('../../assets/background-1440.jpg');
+      url('https://images.squarespace-cdn.com/content/v1/5e411f8cc9497920088807ba/1581326984730-1HGTWQZEZTTU3E5AQQVY/ke17ZwdGBToddI8pDm48kJ2JNrqg38NLE6EINrl1fKp7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UWHWlyksiG6KTEjpTFNnWyaaS-RuEH_PIlm0gIqb_pqFYFqkiPy4SUk90KK9afo6Pg/IMG-20190928-WA0060.jpg');
 
     /* Add loading color for the div */
     background-color: var(--matterColor);
